    by default, i.e. -S(top) and -C(lose); update your scripts accordingly
  * rtcontrol: "-s*" sorts according to the given output format
  * rtcontrol: "--stats" and "--summary" to print a statistical summary; 
    note that for some fields (e.g. dates) and some kinds of formatting the
    summary values might not make sense.
  * chtor: "-s field" now deletes the field (assignment without any value)
  * Bugfix: Conditions nested 2 or more levels didn't work

 -- pyroscope <pyroscope.project@gmail.com>  Wed, 02 Mar 2011 01:24:15 +0100

pyroscope (0.3.10) hardy; urgency=low

  * New "hashcheck" tool to check data against existing torrent file
  * rtcontrol: New option "--tee-view" to ADDITIONALLY show search
    results in ncurses view (modifies -V and --to-view behaviour)
  * rtcontrol: New options "--purge" and "--cull" for data deletion
  * rtcontrol: Prefix "--sort-fields" names with a '-' to get
    descending order for that field only
  * lstor: new option --skip-validation to show the contents of
    broken metafiles (validation errors just result in warnings)

 -- pyroscope <pyroscope.project@gmail.com>  Wed, 02 Mar 2011 01:11:58 +0100

pyroscope (0.3.9) hardy; urgency=low

  * Some internal fixes, mostly better error reporting

 -- pyroscope <pyroscope.project@gmail.com>  Sun, 12 Sep 2010 14:04:09 +0200

pyroscope (0.3.8) hardy; urgency=low

  * rtxmlrpc: Added --xml option
  * chtor: Added --set and --clean-xseed options
  * pyroadmin: Added --output option
  * Some API changes

 -- pyroscope <pyroscope.project@gmail.com>  Sun, 12 Sep 2010 13:36:36 +0200

pyroscope (0.3.7) hardy; urgency=low

  * rtmv: Added symlinked moving
  * Added grouping of conditions by [ ... ] (note the spaces)
  * Added field "uploaded" (which is actually referenced in 0.3.6's
    "short" output format, oops)
  * Added field "fno" (number of files in an item)
  * Added field "traits" (hierarchical classifier, great for use in
    completion paths)